sources = [
  'MuxConfigParser.cpp',
  'nvstreammux_batch.cpp',
  'nvstreammux_pads.cpp',
  'nvstreammux.cpp'
]

headers = [
    'MuxConfigParser.h',
    'nvstreammux_batch.h',
    'nvstreammux_debug.h',
    'nvstreammux_pads.h',
    'nvstreammux.h',
    
    '../includes/CivetServer.h',
    '../includes/civetweb.h',
    '../includes/config.h',
    '../includes/gst-nvcommon.h',
    '../includes/gst-nvcustomevent.h',
    '../includes/gst-nvdscommonconfig.h',
    '../includes/gst-nvdscustomevent.h',
    '../includes/gst-nvdscustommessage.h',
    '../includes/gst-nvdssr.h',
    '../includes/gst-nvevent.h',
    '../includes/gst-nvmessage.h',
    '../includes/gst-nvmultiurisrcbincreator.h',
    '../includes/gst-nvquery-internal.h',
    '../includes/gst-nvquery.h',
    '../includes/gstnvdsbufferpool.h',
    '../includes/gstnvdsinfer.h',
    '../includes/gstnvdsmeta.h',
    '../includes/gstnvdsseimeta.h',
    '../includes/gstnvvideotestsrc.h',
    '../includes/gst_nvdsaudio.h',
    '../includes/INvDsAllocator.h',
    '../includes/nvbufaudio.h',
    '../includes/nvbufsurface.h',
    '../includes/nvbufsurftransform.h',
    '../includes/nvdscustomusermeta.h',
    '../includes/nvdsdummyusermeta.h',
    '../includes/nvdsgstutils.h',
    '../includes/nvdsinfer.h',
    '../includes/nvdsinfer_context.h',
    '../includes/nvdsinfer_custom_impl.h',
    '../includes/nvdsinfer_dbscan.h',
    '../includes/nvdsinfer_logger.h',
    '../includes/nvdsinfer_tlt.h',
    '../includes/nvdsinfer_utils.h',
    '../includes/NvDsMemoryAllocator.h',
    '../includes/nvdsmeta.h',
    '../includes/nvdsmeta_schema.h',
    '../includes/nvdsnmos.h',
    '../includes/nvdspreprocess_interface.h',
    '../includes/nvdspreprocess_meta.h',
    '../includes/nvdstracker.h',
    '../includes/nvds_analytics_meta.h',
    '../includes/nvds_appctx_server.h',
    '../includes/nvds_audio_meta.h',
    '../includes/nvds_dewarper_meta.h',
    '../includes/nvds_latency_meta.h',
    '../includes/nvds_latency_meta_internal.h',
    '../includes/nvds_logger.h',
    '../includes/nvds_mask_utils.h',
    '../includes/nvds_msgapi.h',
    '../includes/nvds_obj_encode.h',
    '../includes/nvds_opticalflow_meta.h',
    '../includes/nvds_rest_server.h',
    '../includes/nvds_roi_meta.h',
    '../includes/nvds_tracker_meta.h',
    '../includes/nvds_version.h',
    '../includes/nvds_yml_parser.h',
    '../includes/nvll_osd_api.h',
    '../includes/nvll_osd_struct.h',
    '../includes/nvmsgbroker.h',
    '../includes/nvtx_helper.h',
    '../includes/NVWarp360.h',
    '../includes/patterns.h',
]

install_headers(headers, subdir : join_paths(get_option('prefix'), 'include/gstreamer-1.0/nvidia'))

custom_nvlibraries = static_library('nvlibs',
  sources,
  #include_directories: include_directories('.','../gst-metadata','../'), 
  include_directories: [configinc, libsinc, yamlinc, '.'],
  dependencies: [gst_dep, yaml_dep, gstbase_dep, gstnet_dep, gstcontroller_dep, gstpbutils_dep, gstallocators_dep, gstapp_dep, gstaudio_dep, gstfft_dep, gstriff_dep, gstrtp_dep, gstrtsp_dep, gstsdp_dep, gsttag_dep, gstvideo_dep, gobject_dep, glib_dep],
  install: true,
  install_dir: plugins_install_dir,
)


pkgconfig.generate(custom_nvlibraries, install_dir : plugins_pkgconfig_install_dir)
plugins += [custom_nvlibraries]